--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
     <link rel="stylesheet" href="./styles/navbar.css">
     <link rel="stylesheet" href="./styles/filterArea.css">
     <link rel="stylesheet" href="./styles/modal.css">
+    <link rel="stylesheet" href="./styles/emptyCard.css">
     
     <meta name="description" content="Control Finance - Seu controle financeiro">
     <title>Control Finance</title>
@@ -36,19 +37,21 @@
                 <div class="flex gap2">
                     <input type="radio" hidden id="filterTodos" value="filterTodos" name="valueType">
                     <label class="btn-outline" tabindex="0" for="filterTodos">Todos</label>
+
                     <input type="radio" hidden id="filterEntradas" value="filterEntradas" name="valueType">
                     <label class="btn-outline" tabindex="0" for="filterEntradas">Entradas</label>
+
                     <input type="radio" hidden id="filterSaidas" value="filterSaidas" name="valueType">
                     <label class="btn-outline" tabindex="0" for="filterSaidas">Saídas</label>
                 </div>
             </div>
             <div class="cardTotal bgc-grey5 flex space-btwn">
-                <p class="text1-medium">Soma dos valores</p>
-                <p class="text1-medium">R$ 2.120,00</p>
+                <!-- <p class="text1-medium">Soma dos lançamentos</p> -->
+                <!-- <p class="text1-medium">R$ 2.120,00</p> -->
             </div>
         </section>
         <section class="container flex-col gap1" id="cardsArea">
-            <div class="card">
+            <!-- <div class="card">
                 <p class="card-value">R$40.00</p>
                 <div class="card-btns">
                     <p class="category-tag">Entrada</p>
@@ -103,12 +106,22 @@
                     <p class="category-tag">Saída</p>
                     <button class="btn-delete"></button>
                 </div>
+            </div> -->
+        </section>
+        <section class="container">
+            <div class="emptyCard show-emptyCard">
+                <p class="title2-bold">Nenhum valor cadastrado</p>
+                <p class="text1-medium">Registre um novo valor</p>
+            </div>
+            <div class="cardSaldo bgc-grey5 flex space-btwn">
+                <p class="text1-medium">Saldo em conta</p>
+                <p class="text1-medium">R$ 2.120,00</p>
             </div>
         </section>
     </main>
 
-    <div class="modal bgc-modal show-modal" id="modal">
-        <div class="modal-card flex-col gap1">
+    <div class="modal bgc-modal" id="modal">
+        <form class="modal-card flex-col gap1">
             <div class="flex space-btwn">
                 <h2 class="title2-bold">Registro de valor</h2>
                 <button class="btn-close-modal" data-modal-control="modal">X</button>
@@ -116,24 +129,25 @@
             <p class="text1-regular">Digite o valor e em seguida aperte o botão referente ao tipo do valor</p>
             <div class="flex-col gap3">
                 <label class="text1-medium" for="valor">Valor</label>
-                <span class="input-span input-default">R$<input class="currency-input" type="number" step="0.01" required placeholder="00.00"></span>
+                <span class="input-span input-default">R$<input class="currency-input" type="number" step="0.01" placeholder="00.00"></span>
             </div>
             <div class="modal-categoty-btn flex-col gap3">
                 <p class="text1-medium">Tipo de valor</p>
-                <input type="radio" hidden id="0" value="0" name="valueType">
+                <input type="radio" hidden id="0" value="0" name="categoryInput">
                 <label class="btn-outline" tabindex="0" for="0">Entrada</label>
-                <input type="radio" hidden id="1" value="1" name="valueType">
+                <input type="radio" hidden id="1" value="1" name="categoryInput">
                 <label class="btn-outline" tabindex="0" for="1">Saída</label>
             </div>
-            <div class=" flex space-btwn">
-                <button class="btn-greylow modal-submit-btn">Cancelar</button>
-                <button class="btn-primary modal-submit-btn">Inserir valor</button>
+            <div class="flex space-btwn">
+                <button class="btn-greylow modal-submit-btn" data-modal-control="modal">Cancelar</button>
+                <button class="btn-primary modal-submit-btn"  id="add-btn" type="submit">Inserir valor</button>
             </div>
-        </div>
+        </form>
     </div>
 
-    <script src="./scripts/modal.js"></script>
+
     <script src="./pages/home/valuesData.js"></script>
     <script src="./pages/home/index.js"></script>
+    <script src="./scripts/modal.js"></script>
 </body>
 </html>
